get server json data 	modified:   app/.gitignore 	modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	modified:   app/src/main/java/com/hawksjamesf/simpleweather/HomeActivity.java 	modified:   app/src/main/java/com/hawksjamesf/simpleweather/HomeFragment.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/SimpleWeatherApplication.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/TemperatureView.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/WeatherAPIInterface.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/WeatherData.java 	new file:   app/src/main/res/drawable/big_level_shape.xml 	new file:   app/src/main/res/drawable/good_level_shape.xml 	new file:   app/src/main/res/drawable/item_click.xml 	modified:   app/src/main/res/layout/fragment_home.xml 	new file:   app/src/main/res/layout/item_weather.xml 	deleted:    library/.gitignore 	deleted:    library/build.gradle 	deleted:    library/libs/LeonidsLib-1.3.2.jar 	deleted:    library/proguard-rules.pro 	deleted:    library/src/androidTest/java/xyz/matteobattilana/library/ApplicationTest.java 	deleted:    library/src/main/AndroidManifest.xml 	deleted:    library/src/main/java/xyz/matteobattilana/library/Common/Constants.java 	deleted:    library/src/main/java/xyz/matteobattilana/library/WeatherView.java 	deleted:    library/src/main/java/xyz/matteobattilana/library/WeatherViewSensorEventListener.java 	deleted:    library/src/main/res/drawable/rain.png 	deleted:    library/src/main/res/drawable/snow.png 	deleted:    library/src/main/res/values/attrs.xml 	deleted:    library/src/main/res/values/strings.xml 	deleted:    library/src/test/java/xyz/matteobattilana/library/ExampleUnitTest.java

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,6 @@
                 android:layout_height="match_parent"
                 tools:context="com.hawksjamesf.simpleweather.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <xyz.matteobattilana.library.WeatherView
         android:id="@+id/wv_weather_status"
         android:layout_width="match_parent"
@@ -55,17 +54,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:layout_alignTop="@+id/tv_temperature"
         android:layout_toEndOf="@+id/tv_temperature"/>
-    <me.zhouzhuo.zzweatherview.ZzWeatherView
-        android:layout_alignParentBottom="true"
-        android:id="@+id/weather_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbarThumbHorizontal="@drawable/scroll_bar_thumb"
-        android:scrollbarTrackHorizontal="@drawable/scroll_bar_thumb"
-        android:scrollbarSize="4dp"
-        android:background="#333"
-    >
-    </me.zhouzhuo.zzweatherview.ZzWeatherView>
+    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+                                            android:layout_height="match_parent"
+    android:id="@+id/rv_fiften_days_forecast">
+
+    </android.support.v7.widget.RecyclerView>
+
+
+
 
 
 </RelativeLayout>
