--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,47 +21,46 @@
         app:startingWeather="RAIN"/>
 
     <TextView
-        android:text="2017-06-27"
+        android:id="@+id/tv_date"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_below="@+id/tv_city"
-        android:layout_alignParentStart="true" android:layout_marginStart="12dp"
-        android:layout_marginTop="16dp" android:id="@+id/tv_date"/>
+        android:layout_height="wrap_content" android:layout_alignParentStart="true"
+        android:layout_below="@+id/tv_city" android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp" android:text="2017-06-27"/>
     <TextView
-        android:text="Tuesday"
+        android:id="@+id/tv_week"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_week" android:layout_alignBaseline="@+id/tv_date"
-        android:layout_alignBottom="@+id/tv_date" android:layout_toEndOf="@+id/tv_date"
-        android:layout_marginStart="14dp"/>
+        android:layout_alignBaseline="@+id/tv_date" android:layout_alignBottom="@+id/tv_date"
+        android:layout_marginStart="14dp" android:layout_toEndOf="@+id/tv_date"
+        android:text="Tuesday"/>
     <TextView
         android:id="@+id/tv_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/wv_weather_status"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
-        android:text="Shanghai"
-        android:textSize="24sp"
-        android:layout_below="@+id/wv_weather_status" android:layout_centerHorizontal="true"/>
+        android:text="Shanghai" android:textSize="24sp"/>
     <TextView
-        android:text="26"
+        android:id="@+id/tv_temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_temperature"
-        android:layout_above="@+id/tv_date" android:layout_alignStart="@+id/tv_date"
-        android:layout_marginStart="17dp" android:textSize="36sp" android:textStyle="normal|bold|italic"
-        android:textAllCaps="false"/>
+        android:layout_above="@+id/tv_date"
+        android:layout_alignStart="@+id/tv_date" android:layout_marginStart="17dp"
+        android:text="26" android:textAllCaps="false"
+        android:textSize="36sp"
+        android:textStyle="normal|bold|italic"/>
     <TextView
-        android:text="0"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_alignTop="@+id/tv_temperature"
-        android:layout_toEndOf="@+id/tv_temperature"/>
-    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
-                                            android:layout_height="match_parent"
-    android:id="@+id/rv_fiften_days_forecast">
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_temperature" android:layout_toEndOf="@+id/tv_temperature"
+        android:text="0"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_fiften_days_forecast"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
-
-
-
 
 
 </RelativeLayout>
