--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,7 +15,7 @@
         android:id="@+id/vp_weather_background"
         android:layout_below="@id/lpi_indicator"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
     </android.support.v4.view.ViewPager>
 
 </RelativeLayout>
