--- a/app/src/main/res/layout/item_fifteen_days_chart.xml
+++ b/app/src/main/res/layout/item_fifteen_days_chart.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@drawable/item_click"
-              android:orientation="horizontal">
-    <View
-        android:id="@+id/line_one"
-        android:layout_width="1px"
-        android:layout_height="match_parent"
-        android:background="#eee"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/item_click">
+    <!--<View-->
+    <!--android:id="@+id/line_one"-->
+    <!--android:layout_width="1px"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:background="#eee"/>-->
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -21,106 +21,102 @@
         <TextView
             android:id="@+id/tv_week"
             android:layout_width="match_parent"
-            android:layout_height="60px"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:text="昨天"
-            android:layout_marginTop="20px"
             android:textColor="#fff"
-            android:textSize="38px" />
+            android:textSize="10sp"/>
 
+        <!--android:layout_marginTop="20dp"-->
         <TextView
             android:id="@+id/tv_date"
             android:layout_width="match_parent"
-            android:layout_height="60px"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:text="12/07"
             android:textColor="#fff"
-            android:textSize="38px" />
+            android:textSize="10sp"/>
 
         <TextView
             android:id="@+id/tv_day_weather"
             android:layout_width="match_parent"
-            android:layout_height="60px"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:text="晴"
             android:textColor="#fff"
-            android:textSize="38px" />
+            android:textSize="10sp"/>
 
         <ImageView
             android:id="@+id/iv_day_weather"
-            android:layout_width="80px"
-            android:layout_height="80px"
-            android:layout_marginTop="10px"
-            android:src="@drawable/big_level_shape" />
-
-        <com.hawksjamesf.simpleweather.TemperatureView
-            android:id="@+id/ttv_day"
-            android:layout_marginTop="10px"
-            android:layout_width="match_parent"
-            android:layout_height="300px"
-        />
-        <!--
-
-                <me.zhouzhuo.zzweatherview.TemperatureView
-                    android:id="@+id/ttv_night"
-                    android:layout_marginTop="5px"
-                    android:layout_marginBottom="10px"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"/>
-        -->
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="10dp" android:src="@mipmap/w0"/>
+        <!--android:src="@drawable/big_level_shape" />-->
+    </LinearLayout>
+    <com.hawksjamesf.simpleweather.TemperatureView
+        android:id="@+id/ttv_day"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"/>
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_alignParentBottom="true"
+                  android:gravity="center_horizontal"
+                  android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv_night_weather"
-            android:layout_width="80px"
-            android:layout_height="80px"
-            android:layout_marginBottom="10px"
-            android:src="@drawable/big_level_shape" />
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:adjustViewBounds="false"
+            android:cropToPadding="false"
+            android:src="@mipmap/w0"/>
+        <!--android:src="@drawable/big_level_shape" />-->
 
         <TextView
             android:id="@+id/tv_night_weather"
             android:layout_width="match_parent"
-            android:layout_height="60px"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:text="晴"
             android:textColor="#fff"
-            android:textSize="38px" />
+            android:textSize="10sp"/>
 
-        <TextView
-            android:id="@+id/tv_wind_ori"
-            android:layout_width="match_parent"
-            android:layout_height="60px"
-            android:gravity="center"
-            android:text="西南风"
-            android:textColor="#fff"
-            android:textSize="30px" />
+        <!--<TextView-->
+        <!--android:id="@+id/tv_wind_ori"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:gravity="center"-->
+        <!--android:text="西南风"-->
+        <!--android:textColor="#fff"-->
+        <!--android:textSize="10sp"/>-->
 
-        <TextView
-            android:id="@+id/tv_wind_level"
-            android:layout_width="match_parent"
-            android:layout_height="60px"
-            android:gravity="center"
-            android:text="3级"
-            android:textColor="#fff"
-            android:textSize="38px" />
+        <!--<TextView-->
+        <!--android:id="@+id/tv_wind_level"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:gravity="center"-->
+        <!--android:text="3级"-->
+        <!--android:textColor="#fff"-->
+        <!--android:textSize="10sp"/>-->
 
-        <TextView
-            android:id="@+id/tv_air_level"
-            android:layout_width="60px"
-            android:layout_height="38px"
-            android:layout_marginTop="20px"
-            android:background="@drawable/good_level_shape"
-            android:gravity="center"
-            android:text="良"
-            android:layout_marginBottom="20px"
-            android:textColor="#fff"
-            android:textSize="24px" />
+        <!--<TextView-->
+        <!--android:id="@+id/tv_air_level"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="25dp"-->
+        <!--android:background="@drawable/good_level_shape"-->
+        <!--android:gravity="center"-->
+        <!--android:text="良"-->
+        <!--android:textColor="#fff"-->
+        <!--android:textSize="10sp"/>-->
     </LinearLayout>
-    <View
-        android:id="@+id/line_two"
-        android:layout_width="1px"
-        android:layout_height="match_parent"
-        android:background="#eee"/>
 
 
-</LinearLayout>
+    <!--<View-->
+    <!--android:id="@+id/line_two"-->
+    <!--android:layout_width="1px"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:background="#eee"/>-->
+
+
+</RelativeLayout>
