--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -9,6 +8,7 @@
 
 
     <RelativeLayout android:layout_width="match_parent"
+
                     android:layout_height="367dp">
 
 
@@ -52,13 +52,19 @@
 
     </RelativeLayout>
     <!--<View android:layout_width="match_parent" android:layout_height="200dp"-->
-          <!--android:background="@android:color/holo_blue_light"/>-->
+    <!--android:background="@android:color/holo_blue_light"/>-->
 
     <com.hawksjamesf.simpleweather.FifteenDaysView
-        android:orientation="horizontal"
         android:id="@+id/rv_fiften_days_forecast"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="300dp"
+        android:orientation="horizontal"
+        android:weightSum="5">
+        <include android:id="@+id/day1" layout="@layout/item_fifteen_days_chart"/>
+        <include android:id="@+id/day2" layout="@layout/item_fifteen_days_chart"/>
+        <include android:id="@+id/day3" layout="@layout/item_fifteen_days_chart"/>
+        <include android:id="@+id/day4" layout="@layout/item_fifteen_days_chart"/>
+        <include android:id="@+id/day5" layout="@layout/item_fifteen_days_chart"/>
     </com.hawksjamesf.simpleweather.FifteenDaysView>
 
 </LinearLayout>
