--- a/app/src/main/res/layout/item_fifteen_days_chart.xml
+++ b/app/src/main/res/layout/item_fifteen_days_chart.xml
@@ -3,6 +3,9 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:focusableInTouchMode="true"
+                android:scrollHorizontally="true"
+                android:focusable="true"
                 android:background="@drawable/item_click">
     <!--<View-->
     <!--android:id="@+id/line_one"-->
@@ -42,6 +45,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:ellipsize="marquee"
+            android:focusableInTouchMode="true"
+            android:scrollHorizontally="true"
+            android:focusable="true"
+            android:clickable="true"
+            android:maxLines="1"
             android:text="晴"
             android:textColor="#fff"
             android:textSize="10sp"/>
@@ -79,6 +88,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="晴"
+            android:maxLines="1"
             android:textColor="#fff"
             android:textSize="10sp"/>
 
