refactor network code 	modified:   .idea/misc.xml 	modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/AppComponent.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/AppModule.java 	deleted:    app/src/main/java/com/hawksjamesf/simpleweather/HomeFragment.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/MessageEvent.java 	modified:   app/src/main/java/com/hawksjamesf/simpleweather/SimpleWeatherApplication.java 	deleted:    app/src/main/java/com/hawksjamesf/simpleweather/WeatherAPIInterface.java 	deleted:    app/src/main/java/com/hawksjamesf/simpleweather/WebApiInterface.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/bean/DataBean.java 	modified:   app/src/main/java/com/hawksjamesf/simpleweather/bean/RealTimeBean.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/network/NetworkWrapper.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/network/WeatherAPIInterface.java 	renamed:    app/src/main/java/com/hawksjamesf/simpleweather/FifteenDaysAdapter.java -> app/src/main/java/com/hawksjamesf/simpleweather/ui/FifteenDaysAdapter.java 	renamed:    app/src/main/java/com/hawksjamesf/simpleweather/FifteenDaysView.java -> app/src/main/java/com/hawksjamesf/simpleweather/ui/FifteenDaysView.java 	renamed:    app/src/main/java/com/hawksjamesf/simpleweather/HomeActivity.java -> app/src/main/java/com/hawksjamesf/simpleweather/ui/HomeActivity.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/ui/HomeFragment.java 	renamed:    app/src/main/java/com/hawksjamesf/simpleweather/RefreshAdapter.java -> app/src/main/java/com/hawksjamesf/simpleweather/ui/RefreshAdapter.java 	renamed:    app/src/main/java/com/hawksjamesf/simpleweather/RefreshListView.java -> app/src/main/java/com/hawksjamesf/simpleweather/ui/RefreshListView.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/ui/SetupWizardActivity.java 	

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,7 @@
         app:numParticles="55"
         app:orientationMode="ENABLE"
         app:startingWeather="RAIN"/>
-    <com.hawksjamesf.simpleweather.RefreshListView
+    <com.hawksjamesf.simpleweather.ui.RefreshListView
         android:id="@+id/rlv_pull_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
