--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -11,7 +11,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
 
-        android:layout_height="367dp">
+        android:layout_height="380dp">
+        <!--android:layout_height="367dp"-->
 
 
         <TextView
@@ -74,8 +75,8 @@
 
 
     </RelativeLayout>
-    <!--<View android:layout_width="match_parent" android:layout_height="200dp"-->
-    <!--android:background="@android:color/holo_blue_light"/>-->
+    <View android:layout_width="match_parent" android:layout_height="250dp"
+    android:background="@android:color/holo_blue_light"/>
 
     <com.hawksjamesf.simpleweather.ui.FifteenDaysView
         android:id="@+id/rv_fiften_days_forecast"
