use RecyclerView to achieve forecast fuction

--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -10,9 +10,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-
-        android:layout_height="380dp">
-        <!--android:layout_height="367dp"-->
+        android:layout_height="380dp"
+        >
 
 
         <TextView
@@ -78,18 +77,24 @@
     <View android:layout_width="match_parent" android:layout_height="250dp"
     android:background="@android:color/holo_blue_light"/>
 
-    <com.hawksjamesf.simpleweather.ui.FifteenDaysView
+    <com.hawksjamesf.simpleweather.ui.view.forecast.FifteenDaysView
         android:id="@+id/rv_fiften_days_forecast"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
         android:layout_marginBottom="20dp"
-        android:orientation="horizontal"
-        android:weightSum="5">
-        <include android:id="@+id/day1" layout="@layout/item_fifteen_days_chart"/>
-        <include android:id="@+id/day2" layout="@layout/item_fifteen_days_chart"/>
-        <include android:id="@+id/day3" layout="@layout/item_fifteen_days_chart"/>
-        <include android:id="@+id/day4" layout="@layout/item_fifteen_days_chart"/>
-        <include android:id="@+id/day5" layout="@layout/item_fifteen_days_chart"/>
-    </com.hawksjamesf.simpleweather.ui.FifteenDaysView>
+        android:layout_width="match_parent"
+        android:layout_height="400dp"/>
+
+    <!--<com.hawksjamesf.simpleweather.ui.View.forecast.older.FifteenDaysView-->
+        <!--android:id="@+id/rv_fiften_days_forecast"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="300dp"-->
+        <!--android:layout_marginBottom="20dp"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:weightSum="5">-->
+        <!--<include android:id="@+id/day1" layout="@layout/item_fifteen_days_chart"/>-->
+        <!--<include android:id="@+id/day2" layout="@layout/item_fifteen_days_chart"/>-->
+        <!--<include android:id="@+id/day3" layout="@layout/item_fifteen_days_chart"/>-->
+        <!--<include android:id="@+id/day4" layout="@layout/item_fifteen_days_chart"/>-->
+        <!--<include android:id="@+id/day5" layout="@layout/item_fifteen_days_chart"/>-->
+    <!--</com.hawksjamesf.simpleweather.ui.View.forecast.older.FifteenDaysView>-->
 
 </LinearLayout>
