--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,6 @@
         android:id="@+id/wv_weather_status"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_centerHorizontal="true"
         android:layout_marginLeft="-100dp"
         android:layout_marginRight="-100dp"
         app:angle="-3"
@@ -17,7 +16,7 @@
         app:numParticles="55"
         app:orientationMode="ENABLE"
         app:startingWeather="RAIN"/>
-    <com.hawksjamesf.simpleweather.ui.RefreshListView
+    <com.hawksjamesf.simpleweather.ui.view.refresh.RefreshListView
         android:id="@+id/rlv_pull_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
