--- a/app/src/main/res/layout/item_fifteen_days_chart.xml
+++ b/app/src/main/res/layout/item_fifteen_days_chart.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:focusableInTouchMode="true"
-                android:scrollHorizontally="true"
+                android:layout_height="match_parent"
                 android:focusable="true"
-                android:background="@drawable/item_click">
+    android:focusableInTouchMode="true">
+    <!--android:background="@drawable/item_click"-->
+    <!--android:scrollHorizontally="true"-->
+    <!--android:layout_weight="1"-->
     <!--<View-->
     <!--android:id="@+id/line_one"-->
     <!--android:layout_width="1px"-->
@@ -17,13 +17,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
 
         <TextView
             android:id="@+id/tv_week"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="昨天"
@@ -33,7 +34,7 @@
         <!--android:layout_marginTop="20dp"-->
         <TextView
             android:id="@+id/tv_date"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="12/07"
@@ -42,15 +43,15 @@
 
         <TextView
             android:id="@+id/tv_day_weather"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:ellipsize="marquee"
-            android:focusableInTouchMode="true"
-            android:scrollHorizontally="true"
-            android:focusable="true"
             android:clickable="true"
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="center"
             android:maxLines="1"
+            android:scrollHorizontally="true"
             android:text="晴"
             android:textColor="#fff"
             android:textSize="10sp"/>
@@ -59,19 +60,24 @@
             android:id="@+id/iv_day_weather"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginTop="10dp" android:src="@mipmap/w0"/>
+            android:layout_marginTop="10dp"
+            android:src="@mipmap/w0"/>
         <!--android:src="@drawable/big_level_shape" />-->
     </LinearLayout>
-    <com.hawksjamesf.simpleweather.ui.TemperatureView
+
+    <com.hawksjamesf.simpleweather.ui.view.forecast.older.TemperatureView
         android:id="@+id/ttv_day"
-        android:layout_centerVertical="true"
-        android:layout_width="wrap_content"
-        android:layout_height="150dp"/>
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_alignParentBottom="true"
-                  android:gravity="center_horizontal"
-                  android:orientation="vertical">
+        android:layout_width="80dp"
+        android:layout_height="120dp"
+        android:layout_centerVertical="true"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv_night_weather"
@@ -84,11 +90,11 @@
 
         <TextView
             android:id="@+id/tv_night_weather"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="晴"
             android:maxLines="1"
+            android:text="晴"
             android:textColor="#fff"
             android:textSize="10sp"/>
 
