--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
         android:layout_marginBottom="247dp"
         android:gravity="center"
         android:text="Splash\n
-Hello World"
+Simple Weather"
         android:textColor="@android:color/holo_blue_light"
         android:textSize="40sp"/>
 </RelativeLayout>
