--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/primary_material_light</color>
+    <color name="colorPrimaryDark">@color/primary_dark_material_light</color>
+    <color name="colorAccent">@color/accent_material_light</color>
+
     <color name="apricot">#ffa86a</color>
-    <color name="afasf">#D6D7D7</color>
+    <color name="afasf">#d6d7d7</color>
     <color name="lightGreyBlue">#9cb3dd</color>
 </resources>
